# vcs

./: .gitmodules  Cargo.toml  deployment-guide.md
.cargo/: config.toml
apps/: Cargo.toml
contracts/: BinaryMT.sol  BinaryMTree.sol  EvenNumber.sol  LeanBinaryImt.sol
core/: Cargo.toml
core/src/: lib.rs
methods/guest/: Cargo.toml
script/: Deploy.s.sol
