[package]
name = "apps"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
alloy-primitives = { workspace = true }
alloy-sol-types = { workspace = true }
alloy = { version = "0.2.1", features = [
    "full"
] }
futures-util = "0.3"
eyre = "0.6"
serde = "1.0"
serde_json = "1.0"
anyhow = { workspace = true }
clap = { version = "4.0", features = ["derive", "env"] }
env_logger = { version = "0.10" }
ethers = { workspace = true }
log = { workspace = true }
methods = { workspace = true }
risc0-ethereum-contracts = { workspace = true }
risc0-zkvm = { workspace = true, features = ["client"] }
tokio = { version = "1.35", features = ["full"] }
