[package]
name = "apps"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
alloy-primitives = { workspace = true }
alloy-sol-types = { workspace = true }
alloy = { version = "0.2.1", features = ["full"] }
zk-kit-imt = { path = "../../imt-rs/crates/imt" }
lean-imt = "0.1.0"
futures-util = "0.3"
eyre = "0.6"
serde = "1.0"
serde_json = "1.0"
anyhow = { workspace = true }
clap = { version = "4.0", features = ["derive", "env"] }
env_logger = { version = "0.10" }
ethers = { workspace = true }
log = { workspace = true }
methods = { workspace = true }
risc0-ethereum-contracts = { workspace = true }
risc0-zkvm = { workspace = true, features = ["client"] }
tokio = { version = "1.35", features = ["full"] }
fhe = { git = "https://github.com/gnosisguild/fhe.rs", version = "0.1.0-beta.7" }
fhe-traits = { git = "https://github.com/gnosisguild/fhe.rs", version = "0.1.0-beta.7" }
rand = "0.8"
sha3 = "0.10.8"
num-bigint = "0.4"
num-traits = "0.2"
hex = "0.4"
light-poseidon = "0.2.0"
ark-ff = "0.4.2"
ark-bn254 = "0.4.0"
sha2 = "0.10.8"
vcs-core = { path = "../core" }
